# pytorch-template

./: .gitignore  LICENSE  README.html  README.md  config.toml  log.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt
src/example/: __main__.py  checkpoint.py  config.py  dataset.py  evaluate.py  examples.py  model.py  train.py  trainer.py  tune.py  tuner.py
src/template/: __main__.py  checkpoint.py  config.py  dataset.py  model.py  train.py  tune.py
tests/: test_dataset.py  test_model.py
